  * fix problems with some more elaborate post plugin setups
  * discontinuity problems in audio only streams fixed
  * fix a bug in the id3v2.2 parsing code
  * fix best streams choice in mmsh
  * updated internal copy of ffmpeg with a lot of warning fixes
  * help texts for video post plugins
  * fix pts handling bug that caused long freezing in some animated dvd menus

xine-lib (1-rc2)
  * XvMC support for hardware accelerated mpeg2 playback (-V xvmc)
  * Fix some errors in sound state when exiting xine and using alsa.
  * new tvtime/deinterlacer algorithm scalerbob
  * new tvtime/deinterlacer option "cheap mode": skips format conversion.
    (uses less cpu but it's not 100% accurate)
  * encoding of URL with multibyte characters in MMS
  * fix ssa subtitle handling
  * don't find out id3 info in mp3 files saved from non-seekable inputs
  * handle filenames containing # or % more nicely
  * net buffer controler cleanup and fixes
  * mms command 0x20 support, bugfixes
  * concatenated asf streams support
  * fix performance issue with wav demuxer and compressed data
  * fix mpeg 2 audio frame parsing (mpeg_audio demuxer)
  * fix segmentation fault in mms when iconv_open fails
  * allow lazy loading of Sun mediaLib (configure --enable-mlib-lazyload)
  * clugged security hole in RIP input plugin - all saved data are 
    stored into one dir now, default save directory is empty what means 
    disable saving (problem reported by Michiel Toneman, many thanks)
  * the former VCDX plugin is now the default VCD plugin which opens up
    a world of new features for VCD users (the old plugin is still
    available as VCDO)
  * documentation (xine hacker's guide) has undergone a major update

xine-lib (1-rc1)
  * fix incorrect colours when blending frame with a big-endian RGB pixel format
  * add support for chroma keyed overlay graphics to video_out_pgx64
  * add support for double and multi-buffering to video_out_pgx64